# proof-of-reserves

./: .dockerignore  .env.example  .gitignore  .gitmodules  Anchor.toml  Cargo.toml  Dockerfile.transmitter  README.md  WrapUranium.md  chainlink.md
.github/workflows/: dev-transmitter-ecs-deploy.yml  production-transmitter-ecs-deploy.yml  staging-transmitter-ecs-deploy.yml  uat-transmitter-ecs-deploy.yml
apps/transmitter/: Cargo.toml  README.md
apps/transmitter/src/: app_config.rs  lib.rs  main.rs
apps/transmitter/src/modes/: directapi.rs  mod.rs  websocket.rs
apps/transmitter/src/original/: directapi.rs  websocket.rs
apps/transmitter/src/transmitter/: transmitter.rs
apps/transmitter/src/utils/: config.rs  mod.rs  oracle_updater_loader.rs  proof_of_reserves_loader.rs  wallet_loader.rs
deployer/: .env.example  README.md  deployed-addresses.json  deployment.md  package copy.json  package-lock.json  package.json  tsconfig.json
deployer/.vanity/: CAKE1GCTDnRg6zb7zyzLu69HxkW8ZJBt9Fx8ENGSS8KF.json  CAKE6A7rCBu7M8E6ts3mKdH7fgANpofmkvxpoJzDf5iR.json  CAKE6hxzd31KhWMWV3qR9csMT4ZfgQT7GuFkyCfgkeQz.json  CAKE8EmFkqPbdpBxb2AojqyVNgTcDvRSPvkanFafhrzr.json  CAKEDf6ffSDHQKmPm8mS1Q4QukLhX5UAT1KQsTtXsexr.json  CAKEJH19rwD5sbr6o4JhhsUdr6dnyqr6Q4Reei32S1Xw.json  CAKEPcgu8UX8zoHdMkmvmjPRcZyyCTb353dpG2JhA36P.json  CAKETfH1q62NY4o2biscJRfS5PocLCsjLLrWeagvNvZa.json  CAKEWdxzkw5DW9k4eUyLJfSheVHKpSR2yrCc88aDmpcj.json  CAKEZYenWG5CA1BCTmzzBqckAMSGfqQHXip751x2s53F.json  CAKEbT1Xgdqiw6LbAWy1XDF22uiQsYjaZ9vGkGvnCHbd.json  CAKEcbm7R8hyFA9WKb5KjTRdapqmCEWfB9m7NvokPTJ7.json  CAKEkiYpoB4q5RAnkfZQMf2cL1DvnLGEtonkeE64bnAg.json  CAKEoeXyoN2p1dpJaQtFuiQfwdFRc27S4ziQKFN6UtD1.json  CAKEqYeMeg8GkiZLazziaapj8HHE8NuMhFNer7w9xTXH.json  CAKErT4DPFaKFRtLnte2PKqHFWyZwB1r9BT94ZYuC4Kd.json  CAKEwLmheGeCjtfq76oaakqNCq1e1vvyG4nesVyuJLwg.json  CAKEzEx3dvmoci2rq3aM27E5WRiE96cNwRLXg8XbPLks.json  CAKeAxJ9trpsjBFsQGCiCWV5miTwxUoE7CVhdcseMYrB.json  CAKeUgGT68MX4gyj1owU6Hi5bNVp1UBnhwJjgkRVMWpB.json  CAKeV8gp5DcZdfEmSfDGzG91BuHWSyNtPVqWV28fw2t4.json  CAKefCpm1uwBNBbHZsLurNtHjdWWFYKWf15avWUAQAhs.json  CAKevs89sLvGFZquUeZSeFPFAAhRoj47ADrrntVrQ24Q.json  CAkEnApTRCmGcWHNtqAR4Wyyz6AenfqyMbAAHAYTJVFg.json  CAkEvkNgrPpfyNzL4pSRGsbxCsFbsychPnpcVsAZCs9Y.json  CAkEvsLAfAWZunAzsG7JPjBTLXxicydAU8JAT6ZHia9i.json  CAke24CW9M7R9VbnNSVdyRe15veAfJPRKrwSnEkPq5o3.json  CAke5vHuCkpk2RGA8Nj4JuL678nHR94BQs8L5GVm9i6V.json  CAkeAEmmyBtK5jrhbnYqBTTnp9WTifoMpCLqQmmpnrDV.json  CAkeS9zsU3RkfDk3n4G2GRitEwXBkgXc5HVJdgCJeNLV.json  CAkeVV4gQ4CLALuX1xdLAbzBqm9TyWRpqeeV5tbn9pQD.json  CAkedopqnZSqSnapR3RikKFnNkfMQVJWWdqaSJhihU5w.json  CAkee4NBJEupY72LAKjgnxZNPWRXbxaNVE4yLU9NFi3A.json  CAkemiAtEVDpoUnoYGzwUgH3SSGa99GX4FeyaxJfPMMa.json  CAkeoPS44kFyYuSN7jFGmHnUnDbz2qRYA2NKuwpRmARV.json  CAkev7BgBADpQSCKLZzcjXVG3emYVgsfdtGSMbbRZTNv.json  CaKE7d5JDJ5y2wrB9C5eMn1Kg7oXMC6TCyi9BSaDiuFi.json  CaKEBQPRmFgeTjE3eAmqG5vBE488CGwMAJpYK7vsEdjC.json  CaKECHFoeNvV1EtH2vw9KS27GiAiTHeoJcD3FfnGnhA3.json  CaKEN3ei65PtuNTLcDccBagzZ5SjxLNAPfYVuyDMrCdT.json  (+44 more)
deployer/scripts/: deploy-por-wrap-uranium.ts
deployer/src/: Common.ts  TokenDeployer.ts  TokenFactory.ts  WalletManager.ts  config.ts  convertKey.ts  index.ts
deployer/src/metaplex/: metaplexDeployToken.ts  metaplexOriginal.ts
deployer/src/scripts/: accept-authority.ts  set-app-config.ts  set-pending-authority.ts
deployer/src/wrapper/: initialize-with-por.ts  supplyReserve.ts
deployer/test/: main.test.ts
oracle-updater/: Anchor.toml  OldCargo.toml  README.md  dependency-tree.md
oracle-updater/programs/oracle-updater/: Cargo.toml
oracle-updater/programs/oracle-updater/src/: instructions.rs  lib.rs
oracle-updater/tests/: Cargo.toml
oracle-updater/tests/src/: test_initialize.rs
programs/oracle-updater/: Cargo.toml
programs/oracle-updater/src/: instructions.rs  lib.rs
programs/proof-of-reserves/: Cargo.toml
programs/proof-of-reserves/src/: err.rs  events.rs  instructions.rs  lib.rs  structs.rs  utils.rs
programs/wrap-uranium/: Cargo.toml
programs/wrap-uranium/src/: err.rs  instructions.rs  lib.rs  structs.rs  utils.rs
task-definition/dev/: uraniumdigital-transmitter.json
task-definition/production/: uraniumdigital-transmitter.json
task-definition/staging/: uraniumdigital-transmitter.json
task-definition/uat/: uraniumdigital-transmitter.json
tests/: Cargo.toml
tests/src/: lib.rs  test_authority.rs  test_initialize.rs
tests/src/common/: mod.rs  verifier_test_setup.rs
transmitter/: .env.example  Cargo.toml  README.md
transmitter/src/: config.rs  main.rs  transmitter.rs  wallet_loader.rs
transmitter/src/modes/: directapi.rs  websocket.rs
transmitter/src/oracle_updater/: loader.rs
transmitter/src/transmitter/: transmitter.rs
transmitter/src/utils/: config.rs  mod.rs  oracle_updater_loader.rs
transmitter/src/verifier/: loader.rs
verifier-client/: README.md  package-lock.json  package.json
verifier-client/src/: WalletManager.ts  config.ts  connection.ts  convertKey.ts  verify.ts
