[workspace]
members = ["programs/*" , "apps/*", "tests"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
oracle-updater = { path = "programs/oracle-updater" }
wrap-uranium = { path = "programs/wrap-uranium" }
transmitter = { path = "apps/transmitter" }

solana-sdk = "2.1.0"
solana-client = "2.1.0"

anchor-lang = "0.31.1"
anchor-client = "0.31.1"
anchor-spl = "0.31.1"

chainlink_solana_data_streams = { git = "https://github.com/smartcontractkit/chainlink-data-streams-solana.git", subdir = "crates/chainlink-solana-data-streams" }
#chainlink-data-streams-report = { git = "https://github.com/smartcontractkit/data-streams-sdk.git", subdir = "rust/crates/report" }
chainlink-data-streams-report = "1.0.0"
chainlink-data-streams-sdk = "1.0.0"
