[workspace]
members = ["programs/*" , "tests"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
proof-of-reserves = { path = "programs/proof-of-reserves" }

solana-sdk = "2.1.0"
solana-client = "2.1.0"
solana-program-test = "2.1.0"

anchor-lang = "0.31.1"
anchor-client = "0.31.1"
anchor-spl = "0.31.1"

chainlink_solana_data_streams = { git = "https://github.com/smartcontractkit/chainlink-data-streams-solana", subdir = "crates/chainlink-solana-data-streams", tag = "v1.1.0" }
chainlink-data-streams-report = "1.0.3"
chainlink-data-streams-sdk = "1.0.0"

num-bigint = "0.4.6"
