[package]
name = "proof-of-reserves-transmitter"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.4", features = ["full"] }
hex = "0.4"

chainlink-data-streams-sdk = "1.0.0"
chainlink-data-streams-report = "1.0.0"
dotenv = "0.15"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time"] }
anchor-client = { version = "0.31.0", features = ["async"] }
anchor-lang = "0.31.0"
anyhow = "1.0.93"
oracle-updater = { path = "../oracle-updater/programs/oracle-updater" }
serde_json = "1.0"
snap = "1"
