[package]
name = "transmitter"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.4", features = ["full"] }
hex = "0.4"

proof-of-reserves = { workspace = true }
chainlink-data-streams-sdk = { workspace = true }
chainlink-data-streams-report = { workspace = true }
dotenv = "0.15"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time"] }
anchor-client = { workspace = true, features = ["async"] }
anchor-lang = { workspace = true }
anyhow = "1.0.93"
serde_json = "1.0"
snap = "1"
