[package]
name = "transmitter"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.4", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
hex = "0.4"

dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.93"
serde_json = "1.0"
serde_with = "3.14.0"
snap = "1"

aws-sdk-secretsmanager = "1.42.0"
aws-config = "1.5.5"
aws-sdk-kms = "1.65.0"
config = "0.14.1"
reqwest = { version = "0.12", features = ["json"] }
rust_decimal = "1.37"
chrono = "0.4"
tokio-cron-scheduler = "0.14.0"

anchor-client = { workspace = true, features = ["async"] }
anchor-lang = { workspace = true }
proof-of-reserves = { workspace = true }
chainlink-data-streams-sdk = { workspace = true }
chainlink-data-streams-report = { workspace = true }
