[package]
name = "oracle-updater"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "oracle_updater"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
chainlink_solana_data_streams = { workspace = true }
chainlink-data-streams-report = { workspace = true }
hex = "0.4"
